@startuml


  class Payment {
    -paymentId: String
    -reservationId: String
    -userId: String
    -amount: double
    -paymentMethod: String
    -status: String
    +Payment(paymentId: String, reservationId: String, userId: String, amount: double, paymentMethod: String, status: String)
    +getPaymentId(): String
    +getReservationId(): String
    +getUserId(): String
    +getAmount(): double
    +getPaymentMethod(): String
    +getStatus(): String
    +setStatus(status: String)
  }

  class Reservation {
    -reservationId: String
    -userId: String
    -date: String
    -time: String
    -numberOfGuests: int
    -status: String
    -type: String
    +Reservation(reservationId: String, userId: String, date: String, time: String, numberOfGuests: int, status: String)
    +setReservationId(reservationId: String)
    +setUserId(userId: String)
    +setDate(date: String)
    +setTime(time: String)
    +setNumberOfGuests(numberOfGuests: int)
    +setStatus(status: String)
    +getReservationId(): String
    +getUserId(): String
    +getDate(): String
    +getTime(): String
    +getNumberOfGuests(): int
    +getStatus(): String
    +getType(): String
  }

  class Review {
    -reviewId: String
    -userName: String
    -reservationId: String
    -rating: int
    -comment: String
    -timestamp: String
    +Review(reviewId: String, userName: String, reservationId: String, rating: int, comment: String, timestamp: String)
    +getReviewId(): String
    +getUserId(): String
    +getReservationId(): String
    +getRating(): int
    +getComment(): String
    +getTimestamp(): String
    +setRating(rating: int)
    +setComment(comment: String)
    +setTimestamp(timestamp: String)
  }

  class User {
    -username: String
    -password: String
    -role: String
    -name: String
    -email: String
    +User(username: String, password: String, role: String, name: String, email: String)
    +getUsername(): String
    +setUsername(username: String)
    +getPassword(): String
    +setPassword(password: String)
    +getRole(): String
    +setRole(role: String)
    +getName(): String
    +setName(name: String)
    +getEmail(): String
    +setEmail(email: String)
  }

  ' Associations
Reservation "0..*" -- "1" User : creates
Payment "0..*" -- "1" Reservation : reservationId
Payment "0..*" -- "1" User : pays
Review "0..*" -- "1" Reservation : reservationId
Review "0..*" -- "1" User : writes



@enduml